--- a/main.css
+++ b/main.css
@@ -310,6 +310,9 @@ ul.footer-links li a{
     
 
 }
+.a1{
+    padding-top: 15%;
+}
 .vision{
     background-color: rgb(1, 55, 138);
     color: white;
