--- a/main.css
+++ b/main.css
@@ -26,11 +26,15 @@ li{
 .legand{
     
     background:aqua;
-   position: fixed;
+    position: fixed;
+    left: 0;
+    right:0;
+    z-index: 100;
+    border-bottom-left-radius:5px ;
+    border-bottom-right-radius: 5px;
+   
  
-   left: 0;
-   right:0;
-   z-index: 100;
+  
     
 
 }
@@ -688,7 +692,7 @@ h6{
 .muslim{
     
    
-    margin-top: 85%;
+    margin-top: 57%;
          
 }
 .white-container{
