--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ li{
 .container{
     text-align: center;
     padding: .8em 1.2em;
+   
     
     
 }
@@ -30,11 +31,12 @@ li{
     left: 0;
     right:0;
     z-index: 100;
-    border-bottom-left-radius:5px ;
-    border-bottom-right-radius: 5px;
+    border-bottom-right-radius:5px;
+    border-bottom-left-radius:5px;
+    
    
  
-  
+ 
     
 
 }
@@ -263,12 +265,12 @@ ul.footer-links li a{
 }
 
 .nav-wrapper ul{
-    width: 50%;
+    width: 100%;
     height: 100%;
     background-color: rgb(49, 49, 49);
     top: 0;
     right: 0;
-    text-align: left;
+    text-align: center;
     position: fixed;
     z-index: 20;
     padding-top: 3em;
@@ -308,41 +310,82 @@ ul.footer-links li a{
 .blue{
     background-color: rgb(30, 209, 209);
     color: white;
-    font-size: 1.3em;
+    font-size: 1.4em;
     font-family: arial;
    
     
 
 }
-.a1{
-    padding-top: 15%;
-}
 .vision{
     background-color: rgb(1, 55, 138);
     color: white;
-    font-size: 1.3em;
+    font-size: 1.4em;
     font-family: arial;
 }
 .mission{
     background-color: rgb(30, 209, 209);
     color: white;
-    font-size: 1.3em;
+    font-size: 1.4em;
     font-family: arial;
+    
+}
+h5{
+    
 }
 .team{
     background-color: rgb(5, 18, 53);
     color: white;
-    font-size: 1.2em;
+    font-size: 2.3em;
+    font-weight :600;
     font-family: arial;
     padding-bottom: -5%;
+}
+.container .jimmy{
+    position: absolute;
+    display: inline-block;
+    margin:10px;
+}
+.container .jimmy .img-area{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+}
+.container .jimmy .img-area img{
+    max-width: 100%;
+    transition: transform 2s;
+    
+}
+.container .jimmy:hover .img-area img{
+    transform: scale(1.2);
+}
+
+.img-area {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    transition: transform 1s ease;
+
+
+  
 }
 .pictures{
     width: 100%;
     height: 100%;
     display: inline-block;
     margin: 0;
+    padding: 0;
     position: relative;
     background-color: #03a9f4;
+    
+    transition: 500ms;
+    
+
     
         
  
@@ -351,10 +394,13 @@ ul.footer-links li a{
    
 }
 .pictures img{
-    width: 80%;
+    width: 100%;
     height: 100%;
     margin-bottom: -1%;
-    padding-left: 3em;
+    padding-left: -2em;
+    
+    transition: 500ms;
+   
     
     
     
@@ -369,8 +415,15 @@ ul.footer-links li a{
     opacity: 0;
     
 }
+.picture img :hover{
+    transform: scale(1.1);
+
+}
 .pictures:hover :not(img){
     opacity: 1;
+}
+.pictures img:hover{
+    transform: scale(1.1);
 }
 .smart{
     background-color: #9e9e9e;
@@ -379,12 +432,16 @@ ul.footer-links li a{
     margin: 0;
     position: relative;
     display: inline-block;
+
+    
+    transition: 500ms;
 }
 .smart img{
     width: 100%;
     height: 100%;
-    margin-bottom: -1%;
     padding-left: -2em;
+    
+    transition: 500ms;
 }
 .smart :not(img){
     top: 50%;
@@ -399,17 +456,20 @@ ul.footer-links li a{
 .smart:hover :not(img){
     opacity: 1;
 }
+.smart img:hover{
+    transform: scale(1.1);
+}
 .baraka{
     background: #cddc39;
     position: relative;
     width: 100%;
     height: 100%;
     transition: 500ms;
+
 }
 .baraka img{
-    width: 100%;
+    width:100%;
     height: 100%;
-    margin-bottom: -1%;
     transition: 500ms;
 }
 .baraka :not(img){
@@ -424,7 +484,9 @@ ul.footer-links li a{
 }
 .baraka:hover :not(img){
     opacity: 1;
-    transition: 500ms;
+}
+.baraka img:hover{
+    transform: scale(1.1);
 }
 
 form{
@@ -450,7 +512,7 @@ section{
     background-size: cover;
     position: relative;
     overflow: hidden;
-    
+    margin-top: -1%;
   
   
     
@@ -470,6 +532,7 @@ section{
 h3{
     color: white;
     font-size: 2em;
+    margin-top:27%;
 }
 .we{
     color: white;
@@ -587,7 +650,37 @@ h5{
     color: white;
     margin-top: -5%;
 }
-.section2{
+.header{
+    margin: .5vw;
+    font-size: 0;
+    display: -ms-flexbox;
+    -ms-flexbox-wrap:wrap;
+    -ms-flexbox-direction: column;
+    -webkit-flex-flow:row wrap;
+    flex-flow: row wrap;
+    display: -webkit-box;
+    display: flex;
+}
+.header div{
+    -webkit-box-flex: auto;
+    -ms-flex: auto;
+    flex: auto;
+    width: 200px;
+    margin: .5vw;
+}
+.header div img{
+    width:100%;
+    height: auto;
+}
+@media screen and (max-width: 400px){
+    .header div {
+        margin: 0;
+    }
+    .header{
+        padding: 0;
+    }
+}
+.section{
     width: 100%;
     height: 400px;
     background: url(images/desk2.png);
@@ -620,6 +713,7 @@ h5{
        
     }
     .contact{
+        display: flex;
       
     }
     .send1{
@@ -631,7 +725,8 @@ h5{
     }
     .form{
         padding-bottom: 25%;
-    };
+    }
+
 
 
 
@@ -664,77 +759,21 @@ h6{
     border-radius: 20px;
     margin-top: 8%;
 }
-.main{
-			width: 500px;
-			margin: 50px auto;
-			border-radius: 10px;
-			border: 5px solid #dc143c;
-			border-left: 40px solid #dc143c;
-			box-shadow: 1px 2px 10px #555;
-		}
-		.info{
-			width: 100%;
-			background-color: #dc143c;
-			padding: 7px;
-			text-shadow: 1px 1px 1px #222;
-			color: #fff;
-			font-size: 20px;
-		}
-		.form-box{
-			padding: 20px;
-			background-color: #eee;
-		}
-		label{
-			color: navy;
-			font-size: 18px;
-		}
-		.inp,.msg-box{
-			width: 100%;
-			padding: 10px;
-			margin-top: 4px;
-			margin-bottom: 5px;
-			border-radius: 5px;
-			border: 2px solid #dc143c;
-			font-weight: bold;
-			color: #dc143c;
-			border-right: 15px solid #dc143c;
-			border-left: 15px solid #dc143c;
-			resize: none;
-		}
-		.msg-box{
-			height: 80px;
-		}
-		.inp:focus,.msg-box:focus{
-			outline: none;
-			border: 2px solid navy;
-			border-right: 15px solid navy;
-			border-left: 15px solid navy;
-		}
-		.sub-btn{
-			width: 100%;
-			padding: 10px;
-			border-radius: 5px;
-			margin-top: 5px;
-			border: none;
-			background: linear-gradient(#dc143c,#800000);
-			cursor: pointer;
-			color: #fff;
-			font-size: 20px;
-			text-shadow: 1px 1px 1px #444;
-		}
-		.sub-btn:hover{
-			background: linear-gradient(#800000,#dc143c);
-			opacity: 0.8;
-			transition: all ease-out 0.2s;
-		}
-		.sub-btn:focus{
-			outline: none;
-		}
-	@media(max-width: 720px){
-			.main{
-				width: 90%;
-			}
-		}
+
+
+.h8{
+    color: white;
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+
+
+
+
+
+
+
 
 
 
@@ -763,7 +802,7 @@ h6{
 .muslim{
     
    
-    margin-top: 57%;
+    margin-top: 85%;
          
 }
 .white-container{
@@ -780,12 +819,16 @@ margin-top: 100%;
     margin-top: 1.-1em;
     
 }
+
+.log{
+    margin-left: -10em;
+}
 header{
     margin-top: 2em;
 }
 
 .contact{
-    margin-left: -3em;
+    margin-left: 1em;
     border-radius: 5px;
 
 
@@ -821,7 +864,130 @@ header{
     margin-left: -4em;
     margin-top: -21%;
 }
+.emaill{
+    margin-left: -1em;
 }
+
+
+@media only screen and (min-width: 650px){
+    .rect{
+        width: 40%;
+        padding-left: 13em;
+        margin-top:20%;
+        
+    }
+    h1{
+        padding-left: 3em;
+        font-size: 2em;
+    }
+    .subhead{
+        padding-left: 5em;
+        font-size: 1.4em;
+    }
+    .muslim{
+        margin-top: 60%;
+        width: 80%;
+       
+        
+        
+    }
+    .white-container{
+        margin-top: 70%;
+        
+       
+
+    }
+    .white-container img  {
+       width:28%;
+    }
+    .white-container ul{
+        display:flex;
+    }
+   
+      .smart{
+          margin: 0;
+      }
+      .gallery-container{
+          margin: 0;
+      }
+      .fleex {
+        display: flex;
+      }
+      .baraka{
+          width: 100%;
+
+      }
+      .pictures{
+          width: 100%;
+
+      }
+      .smart{
+          width: 100%;
+      }
+      .nice img{
+        width: 120%;
+       
+
+    }
+    .paa img{
+        width: 120%;
+
+    }
+    .overlay{
+        margin-bottom: 25%;
+    }
+    
+
+}
+@media only screen and (min-width: 706px){
+    .simple{
+        display: flex;
+    }
+    .nice img{
+        width: 150px;
+       
+
+    }
+    .paa img{
+        width: 150px;
+
+    }
+}
+@media only screen and (min-width: 1400px){
+    .simple{
+        display: flex;
+        margin: 0;
+    }
+    .pictures{
+        padding: 0;
+        padding-left: 3px;
+    }
+    .pictures img{
+        width: 100%;
+       
+
+    }
+    .paa img{
+        width: 200px;
+
+    }
+}
+@media only screen and (min-width: 1570px){
+    .pictures{
+    padding-left: -2em;
+    }
+    .logo{
+        padding-left: 1em;
+    }
+    .menu{
+        margin-left: 5em;
+    }
+}
+
+
+
+
+
 
 
 
