--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600');3
 
 body{
     margin: 0;
@@ -267,7 +267,7 @@ ul.footer-links li a{
 .nav-wrapper ul{
     width: 100%;
     height: 100%;
-    background-color: rgb(49, 49, 49);
+    background-color:rgb(12, 12, 12);
     top: 0;
     right: 0;
     text-align: center;
@@ -276,24 +276,31 @@ ul.footer-links li a{
     padding-top: 3em;
 }
 .nav-link-wrapper a{
-    background-color:rgb(78, 75, 75) ;
+    background-color: rgb(12, 12, 12) ;
     color: white;
     padding: 1em 2em;
     display: flex;
     text-decoration: none;
+    float: center;
+    text-align: center;
+    padding-left: 5em;
+    font-size: 2.1em;
+    font-weight: bold;
+    font-family: sans-serif;
 }
 .nav-link-wrapper a:hover{
-    background-color: rgb(236, 199, 32);
+    background-color:rgb(146, 7, 7);
     color: #111;
-    box-shadow: 0 0 50px rgb(236, 199, 32);
+    box-shadow: 0 0 50px rgb(12, 12, 12);
     transition-delay: 0.1s;
 }
 .exit-btn{
     margin-bottom: 1em;
     margin-top: 3 -1em;
-    padding: 0 1 3em;
     text-align: right;
     width: 5%;
+    padding-left: -10em;
+
   
     
 
@@ -301,8 +308,8 @@ ul.footer-links li a{
 }
 .exit-btn img{
     cursor: pointer;
-    padding-left: 1em;
-    width:-1em;
+    margin-left: 20em;
+    width:95%;
     
     
     
@@ -869,6 +876,7 @@ header{
 }
 
 
+
 @media only screen and (min-width: 650px){
     .rect{
         width: 40%;
@@ -980,7 +988,7 @@ header{
         padding-left: 1em;
     }
     .menu{
-        margin-left: 5em;
+        margin-left: 51em;
     }
 }
 
