--- a/main.css
+++ b/main.css
@@ -283,8 +283,8 @@ ul.footer-links li a{
     text-decoration: none;
     float: center;
     text-align: center;
-    padding-left: 2em;
-    font-size: 2.1em;
+    padding-left: 3em;
+    font-size: 180%;
     font-weight: bold;
     font-family: sans-serif;
 }
