--- a/main.css
+++ b/main.css
@@ -16,6 +16,9 @@ ul{
 }
 li{
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+
 }
 .container{
     text-align: center;
@@ -44,10 +47,12 @@ li{
     
     background:aqua;
     position: fixed;
-    left: 0;
-    right:0;
-    z-index: 10;
-    overflow: hidden;
+   left: 0;
+   right: 0;
+  
+z-index: 100;
+
+  
 
  
     
@@ -291,7 +296,7 @@ ul.footer-links li a{
 .nav-link-wrapper a:hover{
     background-color:rgb(146, 7, 7);
     color: #111;
-    box-shadow: 0 0 50px rgb(12, 12, 12);
+    box-shadow: 0 0 50px rgb(146, 7, 7);
     transition-delay: 0.1s;
 }
 .exit-btn{
@@ -648,6 +653,13 @@ h4{
     margin-bottom: 2%;
     z-index: 10%;
 }
+.youtube{
+    background-color: red;
+    margin: 0;
+}
+.yout{
+    width: 20%;
+}
 h5{
     font-size: 2em;
     color: white;
@@ -842,38 +854,96 @@ header{
 }
 .red{
     margin-left:-3em;
-    display: flex;
     margin-top: 3%;
     
 }
 .pfp{
     margin-left:-4em;
-    display: flex;
     margin-top: -26%;
 }
 .tw{
-    display: flex;
+  
     margin-left: -4em;
     margin-top: -20%;
 }
 .bird{
-    display: flex;
     margin-left: -2em;
     margin-top: 8%;
 }
 .insta{
-    display: flex;
     margin-left: -2em;
     margin-top: 8%;
 }
 .in{
-    display: flex;
     margin-left: -4em;
     margin-top: -21%;
 }
 .emaill{
     margin-left: -1em;
 }
+.Youtube{
+    background-color:  #c92f24d8;
+}
+.yout{
+    width: 28%;
+    margin-left: -9em;
+    margin-bottom: -2%;
+}
+.yt{
+    margin-left: 4em;
+    margin-top: -23%;
+    font-size: 2em;
+    font-weight: lighter;
+    color: white;
+}
+.sociall ul li{
+    list-style-type: none;
+    float: left;
+    width: calc(100% / 4);
+}
+.sociall ul li a{
+    display: block;
+    padding: 20px;
+    text-align: none;
+    color: #fff;
+}
+.sociall ul li a .fa{
+    font-size: 65px;
+    transition: .5s;
+    margin-top: 1%;
+}
+.sociall ul li a:hover .fa{
+    transform: rotateY(360deg);
+}
+.sociall ul li:nth-child(1) a
+{
+    background-color:#3b5999;
+    padding-top: 20%;
+}
+.sociall ul li:nth-child(2) a
+{
+    background-color:#55acee;
+}
+.sociall ul li:nth-child(3) a
+{
+    background-color:#e4405f;
+}
+.sociall ul li:nth-child(4) a
+{
+    background-color:#cd201f;
+}
+.media{
+    font-size: 30px;
+    padding-left: 4em;
+    margin-top: -27%;
+}
+
+@media (max-width: 400px){
+    .sociall ul li{
+        width: calc(100% / 1);
+    }
+}
+
 
 
 
@@ -932,21 +1002,55 @@ header{
       .smart{
           width: 100%;
       }
-      .nice img{
-        width: 120%;
-       
-
-    }
-    .paa img{
-        width: 120%;
-
-    }
+  
     .overlay{
         margin-bottom: 25%;
     }
+    .facebook1{
+        margin: 0;
+    }
+    .red{
+        width:10%;
+        margin-left: -1em;
+       
+    }
+    .pfp{
+        font-size: 2em;
+        padding-top: 6%;
+        margin-left: -3em;
+       
+    }
+    .bird{
+        width: 20%;
+        margin-left: -1em;
+    }
+    .tw{
+        margin-left: -3em;
+        font-size: 2em;
+        padding-top: 3%;
+        
+    }
+    .insta{
+        width: 23%;
+    }
+    .in{
+        margin-left: -3em;
+        font-size: 2em;
+        padding-top: 3%;
+    }
+    .social ul {
+        display: flex;
+    }
     
+        .social ul li {
+            width: calc(100% /4);
+        }
+   
+    
+  
 
 }
+
 @media only screen and (min-width: 706px){
     .simple{
         display: flex;
