--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@
 body{
     margin: 0;
     font-family:'Montsertat', sans-serif;
+    overflow: hidden;
+    
     
 }
 p,blockquote{
@@ -18,11 +20,13 @@ li{
     list-style-type: none;
     margin: 0;
     padding: 0;
+  
 
 }
 .container{
     text-align: center;
     padding: .8em 1.2em;
+   
    
     
     
@@ -36,7 +40,7 @@ li{
     z-index: 100;
     border-bottom-right-radius:5px;
     border-bottom-left-radius:5px;
-    
+    text-align: center;
    
  
  
@@ -61,28 +65,56 @@ z-index: 100;
 
 .logo{
     width: 150px;
-    margin-top: -3%;
+    margin-top: 5%;
     padding-left: 1em;
+  
+   
+   
 }
 header{
     display: flex;
     justify-content: space-between;
-    padding: 0;
-    margin: 0;
+
+ 
+  z-index: 10;
+  margin-top: -4%;
+  
+
+
    
     
   
+}
+.head{
+    background: rgba(42, 119, 103, 0.748);
+    z-index: 20;
+    position: fixed;
+    margin: 1.2%;
+    margin-top: -4%;
+    right: 0;
+    left: 0;
+    height: 75px;
 }
 .hide-mobile{
     display: none;
 }
 .menu{
-    width: 25px;
-    margin-top: -50%;
+    width: 20px;
+   
+    margin-top: 45%;
+  
+ 
+    
+    
+    
     
 
    
 }
+.ss{
+    margin-right: 1em;
+}
+
 .rect{
     width: 45%;
     margin-top: 25%;
@@ -324,6 +356,7 @@ ul.footer-links li a{
     color: white;
     font-size: 1.4em;
     font-family: arial;
+    margin-top: 7%;
    
     
 
@@ -341,9 +374,7 @@ ul.footer-links li a{
     font-family: arial;
     
 }
-h5{
-    
-}
+
 .team{
     background-color: rgb(5, 18, 53);
     color: white;
@@ -669,35 +700,9 @@ h5{
     color: white;
     margin-top: -5%;
 }
-.header{
-    margin: .5vw;
-    font-size: 0;
-    display: -ms-flexbox;
-    -ms-flexbox-wrap:wrap;
-    -ms-flexbox-direction: column;
-    -webkit-flex-flow:row wrap;
-    flex-flow: row wrap;
-    display: -webkit-box;
-    display: flex;
-}
-.header div{
-    -webkit-box-flex: auto;
-    -ms-flex: auto;
-    flex: auto;
-    width: 200px;
-    margin: .5vw;
-}
-.header div img{
-    width:100%;
-    height: auto;
-}
+
 @media screen and (max-width: 400px){
-    .header div {
-        margin: 0;
-    }
-    .header{
-        padding: 0;
-    }
+ 
 }
 .section{
     width: 100%;
@@ -842,9 +847,7 @@ margin-top: 100%;
 .log{
     margin-left: -10em;
 }
-header{
-    margin-top: 2em;
-}
+
 
 .contact{
     margin-left: 1em;
